fix: address CodeRabbit round 6 review comments (10 fixes)
Docs:
- architecture.adoc: fix truncated 'ForgeUiSt' → 'ForgeUiState'
- architecture.adoc: update test count 516 → 540
- README.md: add 'properties' language identifier to TCSS code block

API/Data integrity:
- ApiPayloadParser: reject duplicate preset keys after normalization
  with ApiContractException instead of silent overwrite
- JsonFieldReader: replace Map.copyOf/List.copyOf with
  Collections.unmodifiable* to avoid NPE on valid JSON nulls
- HeadlessGenerationService: deduplicate preset/extension inputs
  using LinkedHashSet and .distinct() to prevent false lock drift

UX/Output:
- GenerateCommand: fix --lock help text to mention --save-as
- HeadlessOutputPrinter: guard null catalogSource label
- PostTuiActionExecutor: quote cd path for space-safe copy/paste
- PostGenerationMenuState: clear exitPlan on showAfterSuccess